--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
   
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
